--- a/src/styles/theme.css
+++ b/src/styles/theme.css
@@ -45,6 +45,7 @@
 @layer base {
   body {
     @apply bg-background text-foreground;
+    @apply scrollbar-thin scrollbar-thumb-background-200 scrollbar-thumb-rounded-full scrollbar-track-transparent;
   }
 }
 
